unpackaged/main/default/objects/Account/fields/Demo_Currency__c.field-meta.xml
<CustomField>
    <fullName>Demo_Currency__c</fullName>
    <label>Demo Currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>