unpackaged/main/default/objects/Account/fields/Demo_Example_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Demo_Example_Date_Field__c</fullName>
    <label>Demo Example Date Field</label>
    <type>Date</type>
</CustomField>