unpackaged/main/default/objects/Account/fields/demo_hotfix_email_field__c.field-meta.xml
<CustomField>
    <fullName>demo_hotfix_email_field__c</fullName>
    <label>demo hotfix email field</label>
    <type>Email</type>
</CustomField>