unpackaged/main/default/objects/Account/fields/Demo_Percent__c.field-meta.xml
<CustomField>
    <fullName>Demo_Percent__c</fullName>
    <label>Demo Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>