unpackaged/main/default/objects/Account/fields/Hotfix_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Hotfix_Date_Field__c</fullName>
    <label>Hotfix Date Field</label>
    <type>Date</type>
</CustomField>