unpackaged/main/default/objects/Account/fields/hotfix_new_field_test__c.field-meta.xml
<CustomField>
    <fullName>hotfix_new_field_test__c</fullName>
    <label>hotfix new field test</label>
    <type>Email</type>
</CustomField>