unpackaged/main/default/objects/Account/fields/Hotfix_Phone_Field__c.field-meta.xml
<CustomField>
    <fullName>Hotfix_Phone_Field__c</fullName>
    <label>Hotfix Phone Field</label>
    <type>Phone</type>
</CustomField>